syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.item";
option java_outer_classname = "ItemProto";

package item;

service Item {
  // Sends a greeting
  rpc GetItem (ItemRequest) returns (ItemReply) {}
}

message ItemRequest {
  int32 id = 1;
}

message ItemReply {
  int32 id = 1;
  string name = 2;
  int32 expiresAt = 3;
  bool completed = 4;
}
